Use Config instead of system prop